# GRPolyRen

./: .gitignore  CMakeLists.txt  readme.md
examples/: run_disk.lua  run_disk_movie.lua  run_sphere.lua  run_sphere_movie.lua  run_triangle.lua  run_triangle_movie.lua
genlookup/: helper.cpp  helper.h  main.cpp  nrRungeKutta.cpp  nrRungeKutta.h  schwarzschild.cpp  schwarzschild.h
shader/: flat.frag  flat.vert  geomCoordAxis.frag  geomCoordAxis.vert  geomCrossHairs3D.frag  geomCrossHairs3D.vert  geomSDSphere.frag  geomSDSphere.vert  grpr.frag  grpr.geom  grpr.tc  grpr.te  grpr.vert  grpr_geom.frag  grpr_geom.geom  grpr_geom.vert  grpr_standard.frag  grpr_standard.vert  objectcolor.glsl  pattern.glsl  schwarzschild.glsl
src/: AnimOrbitCam.cpp  AnimOrbitCam.h  AnimParam.cpp  AnimParam.h  Camera.cpp  Camera.h  CoordSystem.cpp  CoordSystem.h  CrossHairs3D.cpp  CrossHairs3D.h  EulerRotation.cpp  EulerRotation.h  FPSCounter.cpp  FPSCounter.h  FileTokenizer.cpp  FileTokenizer.h  GLShader.cpp  GLShader.h  ImGUIHandle.cpp  ImGUIHandle.h  LUT.cpp  LUT.h  LightSource.cpp  LightSource.h  LuaHandle.cpp  LuaHandle.h  Mouse.cpp  Mouse.h  OBJLoader.cpp  OBJLoader.h  Object.cpp  Object.h  Quaternion.cpp  Quaternion.h  Renderer.cpp  Renderer.h  SDSphere.cpp  SDSphere.h  StringUtils.cpp  StringUtils.h  (+8 more)
